--- a/{{cookiecutter.project_slug}}/compose/production/nginx/dcc.conf
+++ b/{{cookiecutter.project_slug}}/compose/production/nginx/dcc.conf
@@ -50,12 +50,12 @@ server {
         proxy_redirect off;
     }
 
-    # location /static/ {
-    #     alias /var/staticfiles/;
-    # }
+    location /static/ {
+        alias /app/staticfiles/;
+    }
 
-    # location /mediafiles/ {
-    #     alias /var/mediafiles/;
-    # }
+    location /mediafiles/ {
+        alias /app/mediafiles/;
+    }
 }
 
