--- a/{{cookiecutter.project_slug}}/compose/production/nginx/nbvcc-dcc.conf
+++ b/{{cookiecutter.project_slug}}/compose/production/nginx/nbvcc-dcc.conf
@@ -72,12 +72,12 @@ server {
       root   /usr/share/nginx/html;
     }
 
-    # location /static/ {
-    #     alias /var/staticfiles/;
-    # }
+    location /static/ {
+        alias /app/staticfiles/;
+    }
 
-    # location /mediafiles/ {
-    #     alias /var/mediafiles/;
-    # }
+    location /mediafiles/ {
+        alias /app/mediafiles/;
+    }
 }
 
